// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should correctly change the button based on the status 1`] = `
<button
  className="js-confirm"
  disabled={false}
  onClick={[Function]}
>
  save
</button>
`;

exports[`should correctly change the button based on the status 2`] = `
<button
  className="js-confirm"
  disabled={false}
  onClick={[Function]}
>
  marketplace.install
</button>
`;

exports[`should correctly change the button based on the status 3`] = `
<button
  className="js-confirm"
  disabled={false}
  onClick={[Function]}
>
  save
</button>
`;

exports[`should display correctly 1`] = `
<Modal
  contentLabel="marketplace.upgrade_to_x.Foo"
  onRequestClose={[Function]}
>
  <header
    className="modal-head"
  >
    <h2>
      marketplace.upgrade_to_x.Foo
    </h2>
  </header>
  <LicenseEditionSet
    className="modal-body"
    edition={
      Object {
        "downloadUrl": "download_url",
        "homeUrl": "more_url",
        "key": "foo",
        "name": "Foo",
        "requestUrl": "license_url",
        "textDescription": "Foo desc",
      }
    }
    editions={
      Array [
        Object {
          "downloadUrl": "download_url",
          "homeUrl": "more_url",
          "key": "foo",
          "name": "Foo",
          "requestUrl": "license_url",
          "textDescription": "Foo desc",
        },
      ]
    }
    updateLicense={[Function]}
  />
  <footer
    className="modal-foot"
  >
    <a
      className="js-modal-close"
      href="#"
      onClick={[Function]}
    >
      cancel
    </a>
  </footer>
</Modal>
`;
